fixed import and exports for data & imgs. Adding styles for navbar

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,14 @@
 	padding: 4rem 6rem;
 }
 
-.flex__center {
+.app__flex {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+.p-text {
+	font-size: 1rem;
+	text-align: left;
+	color: var(--dark-grayish-blue);
+	line-height: 1.5;
 }
