--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,13 @@
 	--color-white: hsl(0, 0%, 100%);
 	--color-blakc: hsl(0, 0%, 0%);
 
-	--font-size: 1rem;
+	--font-size: 2rem;
 	--font-normal: 400;
 	--font-bold: 700;
 }
 
 * {
+	font-family: var(--font-base);
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
