--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,15 +2,16 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: aliceblue;
-	height: 6.25rem;
 }
 .app__navbar-cont {
-	width: 80%;
+	width: 70%;
+	height: 6.25rem;
+
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	background-color: antiquewhite;
+	/* margin-bottom: 2rem; */
+	border-bottom: 1px solid var(--light-grayish-blue);
 }
 .app__logo-menu-cont {
 	display: flex;
@@ -22,12 +23,48 @@
 	justify-content: flex-start;
 	align-items: center;
 	font-size: var(--font-size);
-   font-weight: var(--font-bold);
-   letter-spacing:-2px;
-   /* line-height: -4px; */
+	font-weight: var(--font-bold);
+	letter-spacing: -2px;
+	/* line-height: -4px; */
+}
+.app__logo a {
+	text-decoration: none;
+	color: var(--very-dark-blue);
 }
 .app__cta-btns {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+.app__navbar-links {
+	flex: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	list-style: none;
+	padding-left: 2.5rem;
+}
+li {
+	position: relative;
+	margin: 0 1rem;
+	padding-top: 6px;
+	cursor: pointer;
+	flex-direction: column;
+}
+
+.app__navbar-links a {
+	color: var(--dark-grayish-blue);
+	text-decoration: none;
+	text-transform: capitalize;
+	font-weight: var(--font-normal);
+	font-size: var(--font-p);
+}
+
+.app__cta-cart {
+	padding-right: 2.25rem;
+}
+
+.app__cta-avatar img {
+	width: 100%;
+	height: 50px;
 }
