--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,24 +1,20 @@
 .app__navbar {
 	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.app__navbar-cont {
-	width: 70%;
-	height: 6.25rem;
-
-	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	/* margin-bottom: 2rem; */
 	border-bottom: 1px solid var(--light-grayish-blue);
+	width: 75%;
+	margin: 0 auto;
+	height: 7.25rem;
 }
 .app__logo-menu-cont {
+	/* height: 7.25rem; */
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 }
 .app__logo {
+	width: 100%;
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
@@ -67,4 +63,91 @@ li {
 .app__cta-avatar img {
 	width: 100%;
 	height: 50px;
+}
+
+/* Mobile menui */
+.app__navbar-menu {
+	width: 150px;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.app__navbar-menu img {
+	padding: 12px 20px 0 0;
+}
+
+.app__menu-container {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	z-index: 9909;
+	padding: 1rem;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: flex-end;
+	align-items: flex-end;
+	flex-direction: column;
+	background-color: var(--white-color);
+	background-size: cover;
+	background-repeat: repeat;
+	box-shadow: 0 0 20px rgba(168, 168, 168, 0.15);
+}
+.app__menu-container ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	justify-content: flex-start;
+	align-items: flex-start;
+	flex-direction: column;
+}
+.app__menu-container li {
+	margin: 1rem;
+}
+.app__menu-container a {
+	text-decoration: none;
+	font-size: 1.5rem;
+	text-transform: uppercase;
+	font-weight: 500;
+}
+
+/* desktop menu dissapear till 900px */
+@media screen and (max-width: 900px) {
+	.app__navbar {
+		width: 100%;
+		height: 4.5rem;
+		padding: 0 30px;
+		border-bottom: none;
+	}
+
+	.app__logo-menu-cont {
+		display: none;
+	}
+
+	.app__cta-cart {
+		padding-right: 1.5rem;
+	}
+
+	.app__cta-avatar img {
+		width: 100%;
+		height: 30px;
+	}
+}
+@media screen and (max-width: 1000px) {
+	.app__navbar-links li {
+		margin: 0 0.5rem;
+	}
+}
+
+/* burger menu dissapear from 900px */
+@media screen and (min-width: 900px) {
+	.app__navbar-menu,
+	.app__menu-container {
+		display: none;
+	}
 }
