--- a/src/index.css
+++ b/src/index.css
@@ -8,12 +8,12 @@
 	--very-dark-blue: rgb(29, 32, 37);
 	--dark-grayish-blue: rgb(104, 112, 125);
 	--grayish-blue: rgb(182, 188, 200);
-	--light-grayish-blue: rgb(247, 248, 253);
+	--light-grayish-blue: rgb(223, 228, 255);
 	--color-white: rgb(255, 255, 255);
 	--color-blakc: rgb(0, 0, 0);
 
 	--font-size: 2rem;
-   --font-p:.9375rem;
+   --font-p:1.125rem;
 	--font-normal: 400;
 	--font-bold: 700;
 }
