--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -49,11 +49,26 @@ li {
 }
 
 .app__navbar-links a {
+	padding: 30px 0;
 	color: var(--dark-grayish-blue);
 	text-decoration: none;
 	text-transform: capitalize;
 	font-weight: var(--font-normal);
 	font-size: var(--font-p);
+	/* height: 100%; */
+}
+.app__menu div {
+	width: 100%;
+	height: 0.125rem;
+	background: transparent;
+	border-radius: 10px;
+	transition: all 0.2s ease-in-out;
+	/* margin-top: 2px; */
+	transform: translateY(-3px);
+}
+ul li:hover #navbar__divv {
+	background-color: var(--color-orange);
+	transform: translateY(2px);
 }
 
 .app__cta-cart {
@@ -61,8 +76,16 @@ li {
 }
 
 .app__cta-avatar img {
+	border: 2px solid transparent;
+	border-radius: 100%;
+	transition: all 0.2s ease-in-out;
+}
+.app__cta-avatar img:hover {
+	border-color: var(--color-orange);
+}
+.app__cta-avatar img {
 	width: 100%;
-	height: 50px;
+	height: 55px;
 }
 
 /* Mobile menui */
