--- a/src/container/Product/Product.css
+++ b/src/container/Product/Product.css
@@ -1,3 +1,26 @@
+.app__product {
+	width: 100%;
+	height: 100%;
+}
+
 .app__product-container {
+   display: flex;
+	max-width: 69%;
+	margin-top: 7rem;
 	flex-direction: row;
+	justify-content: space-between;
+}
+
+.app__product-images,
+.app__product-desc {
+	max-width: 45%;
+   /* padding: 0 3rem; */
+}
+.app__product-desc{
+   /* max-width: 45%; */
+   padding-right: 3rem;
+}
+.app__product-img img{
+   width: 100%;
+   height: 100%;
 }
