--- a/src/container/Product/Product.css
+++ b/src/container/Product/Product.css
@@ -4,23 +4,44 @@
 }
 
 .app__product-container {
-   display: flex;
+	display: flex;
 	max-width: 69%;
 	margin-top: 7rem;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: space-around;
 }
-
 .app__product-images,
 .app__product-desc {
-	max-width: 45%;
-   /* padding: 0 3rem; */
+   padding: 0 2rem;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	max-width: 50%;
 }
-.app__product-desc{
-   /* max-width: 45%; */
-   padding-right: 3rem;
+.app__product-img {
+	max-width: 30rem;
 }
-.app__product-img img{
-   width: 100%;
-   height: 100%;
+
+.app__product-img img {
+	width: 100%;
+	height: 100%;
+}
+.big-image,
+.small-image {
+	border-radius: 15px;
+}
+.app__product-thumbnail {
+	padding-top: 2rem;
+	display: flex;
+	flex-grow: 1;
+	justify-content: space-between;
+	align-items: center;
+}
+.app__product-thumbnail:not(:first-child :last-child) {
+	margin: 0 1rem;
+}
+
+.app__product-thumbnail img {
+	width: 6rem;
+	height: 6rem;
 }
