--- a/src/container/Product/Product.css
+++ b/src/container/Product/Product.css
@@ -28,8 +28,7 @@
 	width: 100%;
 	height: 100%;
 }
-.big-image,
-.small-image {
+.big-image {
 	border-radius: 15px;
 }
 .app__product-thumbnail {
@@ -43,9 +42,30 @@
 	margin: 0 1rem;
 }
 
+.small-div-image {
+	border: 3px solid transparent;
+	width: 6.25rem;
+	height: 6.25rem;
+	border-radius: 15px;
+	transition: all 0.15s ease-in-out;
+}
+.selected-div {
+	border: 3px solid var(--color-orange);
+}
+
 .app__product-thumbnail img {
-	width: 6rem;
-	height: 6rem;
+	width: 100%;
+	height: 100%;
+	cursor: pointer;
+	overflow: hidden;
+	transition: all 0.15s ease-in-out;
+	border-radius: 12px;
+}
+.app__product-thumbnail img:hover {
+	opacity: 0.4;
+}
+.selected-image {
+	opacity: 0.4;
 }
 
 /* DESCRIPTION */
@@ -54,21 +74,35 @@
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	font-weight: var(--font-bold);
+	padding-bottom: 1.5rem;
 }
 .app__product-title {
 	color: var(--very-dark-blue);
 	text-transform: capitalize;
-	font-size: 3.5rem;
+	font-size: 3rem;
+	line-height: 1.2;
+	padding-bottom: 2.5rem;
 }
 .app__product-text {
+	font-size: 1.125rem;
 	color: var(--dark-grayish-blue);
 	line-height: 1.7;
+	padding: 0 0 1.5rem 0;
+	max-width: 80%;
+}
+
+.app__product-newPrice {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	padding-bottom: 1rem;
 }
 
 .product-price-now {
 	color: var(--very-dark-blue);
 	font-weight: var(--font-bold);
 	font-size: var(--font-size);
+	padding-right: 1rem;
 }
 
 .product-sale {
@@ -77,7 +111,10 @@
 	font-weight: var(--font-bold);
 	font-size: var(--font-p);
 	padding: 4px 10px;
-   border-radius: 5px;
+	border-radius: 5px;
+}
+.app__product-oldPrice {
+	padding-bottom: 2.5rem;
 }
 
 .product-price-old {
@@ -102,12 +139,24 @@
 	align-items: center;
 }
 
+.app__quantity {
+	padding-right: 1rem;
+}
+
 .app__quantity span {
 	background-color: var(--light-grayish-blue);
 	width: 60px;
 	height: 60px;
+	cursor: pointer;
 	/* padding: 14px 18px; */
 }
+.app__quantity img {
+	transition: all 0.2s ease-in-out;
+}
+.app__quantity span:hover img {
+	opacity: 0.7;
+}
+
 .num {
 	font-weight: var(--font-bold);
 	color: var(--very-dark-blue);
@@ -121,6 +170,11 @@
 	border-radius: 10px;
 	border: none;
 	box-shadow: 0 20px 40px rgba(255, 125, 26, 0.318);
+	cursor: pointer;
+	transition: all 0.15s ease-in-out;
+}
+.add-to-cart:hover {
+	opacity: 0.7;
 }
 .btn-text {
 	font-weight: var(--font-bold);
