--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.section__padding {
-	padding: 4rem 6rem;
-}
-
 .app__flex {
 	display: flex;
 	justify-content: center;
@@ -12,4 +8,30 @@
 	text-align: left;
 	color: var(--brown-color);
 	line-height: 2.5;
+}
+
+/* credits */
+.attribution {
+	position: absolute;
+	bottom: 2rem;
+	left: 50%;
+	transform: translateX(-50%);
+}
+footer a,
+footer a:visited {
+	font-size: large;
+	text-decoration: none;
+	color: var(--color-orange);
+	transition: color 0.2s ease-in-out;
+	font-weight: var(--font-bold);
+}
+footer a:hover {
+	color: #2196f3;
+}
+@media screen and (min-width: 1001px) {
+   .attribution {
+      bottom: 0;
+      left: 5%;
+      transform: translateX(-50%);
+   }
 }
