--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
 	justify-content: space-between;
 	align-items: center;
 	border-bottom: 1px solid var(--grayish-blue);
-	width: 75%;
+	width: 70%;
 	margin: 0 auto;
 	height: 7.25rem;
 }
@@ -110,15 +110,17 @@ ul li:hover #navbar__divv {
 } */
 
 .app__menu-container {
+	display: block;
 	padding: 1.75rem 0 0 2rem;
 	position: fixed;
 	top: 0;
 	bottom: 0;
 	left: 0;
-	z-index: 99;
+	z-index: 999;
 	width: 70%;
 	height: 100vh;
 	display: flex;
+	overflow-y: hidden;
 	justify-content: flex-start;
 	align-items: flex-start;
 	flex-direction: column;
@@ -155,6 +157,7 @@ ul li:hover #navbar__divv {
 	top: 0;
 	bottom: 0;
 	left: 0;
+
 	width: 100%;
 	height: 100vh;
 	z-index: 10;
@@ -164,7 +167,7 @@ ul li:hover #navbar__divv {
 }
 
 /* desktop menu dissapear till 900px */
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 56.25rem) {
 	.app__navbar {
 		width: 100%;
 		height: 4.5rem;
@@ -196,5 +199,19 @@ ul li:hover #navbar__divv {
 	.app__navbar-menu,
 	.app__menu-container {
 		display: none;
+	}
+	.app__navbar {
+		width: 100%;
+	}
+}
+@media screen and (min-width: 1300px) {
+	.app__navbar {
+		width: 70%;
+	}
+}
+
+@media screen and (min-width: 1600px) {
+	.app__navbar {
+		width: 84.375rem;
 	}
 }
