--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -157,13 +157,13 @@ ul li:hover #navbar__divv {
 	top: 0;
 	bottom: 0;
 	left: 0;
-
+	overflow: hidden;
 	width: 100%;
 	height: 100vh;
 	z-index: 10;
 	/* border: 1px solid red; */
-	background-color: black;
-	opacity: 0.75;
+	background-color: rgba(0, 0, 0, 0.689);
+	/* opacity: 0.75; */
 }
 
 /* desktop menu dissapear till 900px */
