--- a/src/container/Product/Product.css
+++ b/src/container/Product/Product.css
@@ -69,6 +69,78 @@
 	opacity: 0.4;
 }
 
+/* Lighbox */
+/* The Modal (background) */
+.app__modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	padding-top: 100px;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: black;
+}
+
+.modal-content {
+	position: relative;
+	background-color: #fefefe;
+	margin: auto;
+	padding: 0;
+	width: 90%;
+	max-width: 1200px;
+}
+
+.close {
+	color: white;
+	position: absolute;
+	top: 10px;
+	right: 25px;
+	font-size: 35px;
+	font-weight: bold;
+}
+.close:hover,
+.close:focus {
+	color: #999;
+	text-decoration: none;
+	cursor: pointer;
+}
+/* Hide the slides by default */
+.mySlides {
+   display: none;
+ }
+ 
+ /* Next & previous buttons */
+ .prev,
+ .next {
+   cursor: pointer;
+   position: absolute;
+   top: 50%;
+   width: auto;
+   padding: 16px;
+   margin-top: -50px;
+   color: white;
+   font-weight: bold;
+   font-size: 20px;
+   transition: 0.6s ease;
+   border-radius: 0 3px 3px 0;
+   user-select: none;
+   -webkit-user-select: none;
+ }
+ /* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+ 
+ /* Position the "next button" to the right */
+ .next {
+   right: 0;
+   border-radius: 3px 0 0 3px;
+ }
+
 /* DESCRIPTION */
 .app__company-title {
 	color: var(--color-orange);
@@ -293,26 +365,25 @@
 	.add-to-cart {
 		width: 11.25rem;
 	}
-   .app__product{
-      margin-bottom: 8rem;
-   }
+	.app__product {
+		margin-bottom: 8rem;
+	}
 }
 
 /* from 1301px */
 @media screen and (min-width: 81.25rem) {
-   .app__product-container {
+	.app__product-container {
 		max-width: 70%;
 	}
 	.add-to-cart {
 		width: 18rem;
 	}
 }
-@media screen and (min-width:1600px) {
-   .app__product-container {
+@media screen and (min-width: 1600px) {
+	.app__product-container {
 		max-width: 82rem;
 	}
 }
 footer {
 	position: relative;
 }
-
