--- a/src/container/Product/Product.css
+++ b/src/container/Product/Product.css
@@ -69,77 +69,23 @@
 	opacity: 0.4;
 }
 
-/* Lighbox */
-/* The Modal (background) */
-.app__modal {
-	display: none;
+.lightbox-div {
 	position: fixed;
-	z-index: 1;
-	padding-top: 100px;
-	left: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	top: 0;
-	width: 100%;
-	height: 100%;
-	overflow: auto;
-	background-color: black;
-}
-
-.modal-content {
-	position: relative;
-	background-color: #fefefe;
-	margin: auto;
-	padding: 0;
-	width: 90%;
-	max-width: 1200px;
-}
-
-.close {
-	color: white;
-	position: absolute;
-	top: 10px;
-	right: 25px;
-	font-size: 35px;
-	font-weight: bold;
-}
-.close:hover,
-.close:focus {
-	color: #999;
-	text-decoration: none;
+	left: 0;
+	height: 100vh;
+	width: 100vw;
+	background-color: rgba(0, 0, 0, 0.822);
 	cursor: pointer;
+	z-index: 1000;
 }
-/* Hide the slides by default */
-.mySlides {
-   display: none;
- }
- 
- /* Next & previous buttons */
- .prev,
- .next {
-   cursor: pointer;
-   position: absolute;
-   top: 50%;
-   width: auto;
-   padding: 16px;
-   margin-top: -50px;
-   color: white;
-   font-weight: bold;
-   font-size: 20px;
-   transition: 0.6s ease;
-   border-radius: 0 3px 3px 0;
-   user-select: none;
-   -webkit-user-select: none;
- }
- /* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+.lightbox-img {
+	width: 500px;
+	height: 500px;
 }
- 
- /* Position the "next button" to the right */
- .next {
-   right: 0;
-   border-radius: 3px 0 0 3px;
- }
 
 /* DESCRIPTION */
 .app__company-title {
