--- a/src/container/Product/Product.css
+++ b/src/container/Product/Product.css
@@ -74,6 +74,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
 	top: 0;
 	left: 0;
 	height: 100vh;
@@ -81,39 +82,85 @@
 	background-color: rgba(0, 0, 0, 0.822);
 	z-index: 1000;
 }
-.lightbox-img-cont {
+.lightbox-big-img-cont {
 	position: relative;
 }
 .lightbox-img {
-	width: 500px;
-	height: 500px;
-	cursor: pointer;
+	width: 550px;
+	height: 550px;
+	border-radius: 20px;
 }
 .prev-icon,
 .next-icon,
 .close-icon {
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	position: absolute;
-	width: 15px;
-	height: 15px;
+	cursor: pointer;
+}
+.prev-icon,
+.next-icon {
 	top: 50%;
 	transform: translateY(-50%);
+	width: 45px;
+	height: 45px;
+	background-color: var(--color-white);
+	border-radius: 50%;
 }
-.close-icon {
-   width: 20px;
-   height: 20px;
-	top: -40px;
-	right: 0;
-}
-.close-icon img,
-.next-icon img,
-.prev-icon img {
-	width: 100%;
+.prev-icon {
+	left: -22px;
 }
 .next-icon {
-	right: 0;
+	right: -22px;
+}
+.close-icon {
+	background-color: transparent;
+	top: -30px;
+	right: 10px;
+	scale: 1.3;
+}
+svg {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateY(-50%) translateX(-40%);
+	transition: all 0.2s ease-in-out;
+	fill: var(--color-white);
+}
+.prev-icon svg {
+	transform: translateY(-50%) translateX(-70%);
+}
+svg:hover {
+	fill: var(--color-orange);
+}
+
+.lightbox-thumb-img-cont {
+	width: 400px;
+	padding-top: 1.5rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.lightbox-thumb-img-cont img {
+	width: 100%;
+	height: 100%;
+	cursor: pointer;
+	overflow: hidden;
+	transition: all 0.15s ease-in-out;
+	border-radius: 12px;
+}
+.lightbox-thumb-img-cont .small-div-image {
+	background-color: white;
+	border: 3px solid  rgba(0, 0, 0, 0.822);
+	width: 5.25rem;
+	height: 5.25rem;
+	border-radius: 15px;
+	transition: all 0.15s ease-in-out;
+}
+.lightbox-thumb-img-cont .selected-div {
+	border: 3px solid var(--color-orange);
+}
+.lightbox-thumb-img-cont img:hover,
+.selected-image {
+	opacity: 0.4;
 }
 
 /* DESCRIPTION */
