--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ footer a:visited {
 footer a:hover {
 	color: #2196f3;
 }
-@media screen and (min-width: 1001px) {
+@media screen and (min-width: 62.5625rem) {
 	.attribution {
 		bottom: 0;
 		left: 5%;
