--- a/src/container/Product/Product.css
+++ b/src/container/Product/Product.css
@@ -25,7 +25,42 @@
 }
 .app__product-img {
 	max-width: 30rem;
-   cursor: pointer;
+	cursor: pointer;
+}
+@media screen and (max-width: 62.4375rem) {
+	.desktop {
+		display: none;
+	}
+}
+.mobile {
+	position: relative;
+}
+.prev-icon,
+.next-icon {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 2.1875rem;
+	height: 2.1875rem;
+	background-color: var(--color-white);
+	border-radius: 50%;
+}
+.prev-icon {
+	left: 22px;
+}
+.next-icon {
+	right: 22px;
+}
+.prev-icon svg {
+	transform: translateY(-50%) translateX(-70%);
+}
+@media screen and (min-width: 62.4375rem) {
+	.mobile {
+		display: none;
+	}
 }
 
 .app__product-img img {
@@ -66,100 +101,6 @@
 	border-radius: 12px;
 }
 .app__product-thumbnail img:hover,
-.selected-image {
-	opacity: 0.4;
-}
-
-.lightbox-div {
-	position: fixed;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	top: 0;
-	left: 0;
-	height: 100vh;
-	width: 100vw;
-	background-color: rgba(0, 0, 0, 0.822);
-	z-index: 1000;
-}
-.lightbox-big-img-cont {
-	position: relative;
-}
-.lightbox-img {
-	width: 550px;
-	height: 550px;
-	border-radius: 20px;
-}
-.prev-icon,
-.next-icon,
-.close-icon {
-	position: absolute;
-	cursor: pointer;
-}
-.prev-icon,
-.next-icon {
-	top: 50%;
-	transform: translateY(-50%);
-	width: 45px;
-	height: 45px;
-	background-color: var(--color-white);
-	border-radius: 50%;
-}
-.prev-icon {
-	left: -22px;
-}
-.next-icon {
-	right: -22px;
-}
-.close-icon {
-	background-color: transparent;
-	top: -30px;
-	right: 10px;
-	scale: 1.3;
-}
-svg {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translateY(-50%) translateX(-40%);
-	transition: all 0.2s ease-in-out;
-	fill: var(--color-white);
-}
-.prev-icon svg {
-	transform: translateY(-50%) translateX(-70%);
-}
-svg:hover {
-	fill: var(--color-orange);
-}
-
-.lightbox-thumb-img-cont {
-	width: 400px;
-	padding-top: 1.5rem;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-.lightbox-thumb-img-cont img {
-	width: 100%;
-	height: 100%;
-	cursor: pointer;
-	overflow: hidden;
-	transition: all 0.15s ease-in-out;
-	border-radius: 12px;
-}
-.lightbox-thumb-img-cont .small-div-image {
-	background-color: white;
-	border: 3px solid  rgba(0, 0, 0, 0.822);
-	width: 5.25rem;
-	height: 5.25rem;
-	border-radius: 15px;
-	transition: all 0.15s ease-in-out;
-}
-.lightbox-thumb-img-cont .selected-div {
-	border: 3px solid var(--color-orange);
-}
-.lightbox-thumb-img-cont img:hover,
 .selected-image {
 	opacity: 0.4;
 }
@@ -206,7 +147,7 @@ svg:hover {
 	background-color: var(--pale-orange);
 	font-weight: var(--font-bold);
 	font-size: var(--font-p);
-	padding: 4px 10px;
+	padding: 0.25rem 0.625rem;
 	border-radius: 5px;
 }
 .app__product-oldPrice {
@@ -241,10 +182,9 @@ svg:hover {
 
 .app__quantity span {
 	background-color: var(--light-grayish-blue);
-	width: 60px;
-	height: 60px;
+	width: 3.75rem;
+	height: 3.75rem;
 	cursor: pointer;
-	/* padding: 14px 18px; */
 }
 .app__quantity img {
 	transition: all 0.2s ease-in-out;
@@ -259,7 +199,7 @@ svg:hover {
 }
 
 .add-to-cart {
-	height: 60px;
+	height: 3.75rem;
 	width: 18rem;
 	background-color: var(--color-orange);
 	color: var(--color-white);
@@ -295,13 +235,12 @@ svg:hover {
 	}
 	.app__product-img {
 		max-width: 100%;
-     
 	}
 	.big-image {
 		object-fit: cover;
+		object-position: top;
 		border-radius: 0;
 		width: 100%;
-		/* height: 20%; */
 		aspect-ratio: 4/3;
 	}
 	.app__product-thumbnail {
@@ -351,7 +290,7 @@ svg:hover {
 		flex-direction: column;
 	}
 	.app__quantity {
-		padding: 0 0 15px 0;
+		padding: 0 0 0.9375rem 0;
 		width: 100%;
 	}
 	.app__quantity span {
@@ -403,7 +342,7 @@ svg:hover {
 		width: 18rem;
 	}
 }
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 100rem) {
 	.app__product-container {
 		max-width: 82rem;
 	}
