--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,6 +7,12 @@
 	margin: 0 auto;
 	height: 7.25rem;
 }
+.app__navbar button{
+   border: none;
+   cursor: pointer;
+   background-color: transparent;
+   padding-top: .25rem;
+}
 .app__logo-menu-cont {
 	/* height: 7.25rem; */
 	display: flex;
