--- a/src/container/Product/Product.css
+++ b/src/container/Product/Product.css
@@ -54,13 +54,27 @@
 .next-icon {
 	right: 22px;
 }
-.prev-icon svg {
-	transform: translateY(-50%) translateX(-70%);
+.prev-icon button,         
+.next-icon button {
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	cursor: pointer;
+	background-color: transparent;
+	border: none;
 }
 @media screen and (min-width: 62.4375rem) {
 	.mobile {
 		display: none;
 	}
+}
+.noselect {
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Old versions of Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently */
 }
 
 .app__product-img img {
@@ -185,6 +199,11 @@
 	width: 3.75rem;
 	height: 3.75rem;
 	cursor: pointer;
+}
+.app__quantity button {
+	cursor: pointer;
+	border: none;
+	background-color: transparent;
 }
 .app__quantity img {
 	transition: all 0.2s ease-in-out;
