--- a/src/container/Product/Product.css
+++ b/src/container/Product/Product.css
@@ -43,8 +43,8 @@
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
-	width: 2.1875rem;
-	height: 2.1875rem;
+	width: 2.25rem;
+	height: 2.25rem;
 	background-color: var(--color-white);
 	border-radius: 50%;
 }
@@ -54,14 +54,8 @@
 .mobile .next-icon {
 	right: 20px;
 }
-.mobile .prev-icon button,
-.mobile .next-icon button {
-	width: 100%;
-	height: 100%;
-	border-radius: 50%;
-	cursor: pointer;
-	background-color: transparent;
-	border: none;
+svg {
+	padding-top: 3px;
 }
 @media screen and (min-width: 62.4375rem) {
 	.mobile {
