--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -79,6 +79,18 @@ ul li:hover #navbar__divv {
 .app__cta-cart {
 	padding-right: 2.25rem;
 }
+.cart-item-qty {
+	position: absolute;
+	right: -8px;
+	font-size: 12px;
+	color: #eee;
+	background-color: #f02d34;
+	width: 18px;
+	height: 18px;
+	border-radius: 50%;
+	text-align: center;
+	font-weight: 600;
+}
 
 .app__cta-avatar img {
 	border: 2px solid transparent;
