--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -104,7 +104,7 @@ ul li:hover #navbar__divv {
 	top: 60px;
 	left: -175px;
 	background-color: white;
-	width: 350px;
+	width: 330px;
 	height: 250px;
 	border-radius: 10px;
 	box-shadow: 0px 20px 25px rgba(0, 0, 0, 0.153);
@@ -122,13 +122,61 @@ ul li:hover #navbar__divv {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-   height:calc(100% - 60px);
-   padding: 30px 20px;
+	height: calc(100% - 60px);
+	padding: 20px 20px 30px 20px;
 }
 /* empty-cart */
-.empty-cart{
-   font-weight: var(--font-bold);
-   color: var(--dark-grayish-blue);
+.empty-cart {
+	font-weight: var(--font-bold);
+	color: var(--dark-grayish-blue);
+}
+/* filled cart */
+.item-in-cart {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.item-img-cont {
+	width: 50px;
+	height: 50px;
+}
+.item-img {
+	width: 100%;
+	height: 100%;
+	border-radius: 5px;
+}
+.item-desc {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: flex-start;
+	padding: 5px 15px;
+}
+.item-title {
+	padding-bottom: 5px;
+}
+
+.item-title,
+.total-qty,
+.total-price {
+	font-size: 14px;
+	color: var(--dark-grayish-blue);
+	font-weight: var(--font-normal);
+}
+.total-price {
+	color: var(--very-dark-blue);
+	font-weight: var(--font-bold);
+}
+
+.in-cart-btn {
+	width: 100%;
+	height: 55px;
+	margin-top: 1.5rem;
+	padding: 0 !important;
+	background-color: var(--color-orange) !important;
+	color: var(--color-white);
+	border-radius: 10px;
+	font-weight: var(--font-bold);
 }
 
 .app__cta-avatar img {
