--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -332,6 +332,9 @@ svg {
 		margin-top: 0;
 		justify-content: center;
 	}
+	.app__product-desc {
+		padding: 1.5rem 0;
+	}
 }
 /* from 1001px */
 @media screen and (min-width: 62.5625rem) {
