--- a/src/components/ImageModal/ImageModal.css
+++ b/src/components/ImageModal/ImageModal.css
@@ -88,6 +88,7 @@ button:focus {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	user-select: none;
 }
 .lightbox-thumb-img-cont img {
 	width: 100%;
