--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -81,14 +81,15 @@ ul li:hover #navbar__divv {
 	position: relative;
 }
 .app__cta-cart button {
-   padding: .375rem;
+	outline-offset: 2px !important;
+	padding: 0.375rem;
 	position: relative;
 	cursor: pointer;
 }
 .cart-item-qty {
 	position: absolute;
-	top: -6px;
-	left: 9px;
+	top: -3px;
+	left: 15px;
 	font-size: 12px;
 	color: #eee;
 	background-color: var(--color-orange);
