--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -25,7 +25,6 @@
 }
 .app__product-img {
 	max-width: 30rem;
-	cursor: pointer;
 }
 @media screen and (max-width: 62.4375rem) {
 	.desktop {
@@ -189,7 +188,7 @@ svg {
 }
 
 .app__quantity span {
-	background-color: var(--light-grayish-blue);
+	background-color: transparent;
 	width: 3.75rem;
 	height: 3.75rem;
 	cursor: pointer;
@@ -205,7 +204,7 @@ svg {
 .app__quantity button {
 	cursor: pointer;
 	border: none;
-	background-color: transparent;
+	background-color: var(--light-grayish-blue);
 }
 .app__quantity img {
 	transition: all 0.2s ease-in-out;
@@ -217,6 +216,7 @@ svg {
 .num {
 	font-weight: var(--font-bold);
 	color: var(--very-dark-blue);
+	background: var(--light-grayish-blue) !important;
 }
 
 .add-to-cart {
@@ -352,6 +352,9 @@ svg {
 }
 /* from 1001px */
 @media screen and (min-width: 62.5625rem) {
+	.app__product-img {
+		cursor: pointer;
+	}
 	.app__product-container {
 		max-width: 60rem;
 	}
