--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -2,6 +2,12 @@
 	padding-right: 2rem;
 	position: relative;
 }
+.app__navbar button {
+	border: none;
+	cursor: pointer;
+	background-color: transparent;
+	padding-top: 0.25rem;
+}
 .app__cta-cart button {
 	outline-offset: 2px !important;
 	padding: 0.375rem;
@@ -60,8 +66,8 @@
 	align-items: center;
 }
 .item-img-cont {
-	width: 50px;
-	height: 50px;
+	width: 55px;
+	height: 55px;
 }
 .item-img {
 	width: 100%;
@@ -73,7 +79,7 @@
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: flex-start;
-	padding: 5px 15px;
+	padding: 5px 12px;
 }
 .item-title {
 	padding-bottom: 5px;
@@ -95,9 +101,72 @@
 	width: 100%;
 	height: 55px;
 	margin-top: 1.5rem;
-	padding: 0 !important;
+	padding: 0 1rem !important;
 	background-color: var(--color-orange) !important;
 	color: var(--color-white);
 	border-radius: 10px;
 	font-weight: var(--font-bold);
+}
+@media screen and (max-width: 56.25rem) {
+	.app__cta-cart {
+		padding-right: 1.5rem;
+	}
+	.app__cart-info {
+		position: absolute;
+		top: 60px;
+		right: -53px;
+		background-color: white;
+		width: 340px;
+		height: 250px;
+		z-index: 888;
+		border-radius: 10px;
+		box-shadow: 0px 20px 25px rgba(0, 0, 0, 0.153);
+	}
+	.item-title,
+	.total-qty,
+	.total-price {
+		font-size: 14px;
+	}
+}
+/* for 320px devices */
+@media screen and (max-width: 21.875rem) {
+	.item-title,
+	.total-qty,
+	.total-price {
+		font-size: 13px;
+	}
+}
+
+/* from 350px to 450px  */
+@media screen and (max-width: 28.125rem) {
+	.app__cart-info {
+		position: absolute;
+		top: 60px;
+		right: -53px;
+		background-color: white;
+		width: 96vw;
+		height: 250px;
+		z-index: 888;
+		border-radius: 10px;
+		box-shadow: 0px 20px 25px rgba(0, 0, 0, 0.153);
+		opacity: 0;
+	}
+	.app__cart-items-cont {
+		width: 300px;
+	}
+}
+
+/* burger menu dissapear from 900px */
+@media screen and (min-width: 56.25rem) {
+	.app__cart-info {
+		position: absolute;
+		top: 60px;
+		left: -175px;
+		background-color: white;
+		width: 330px;
+		height: 250px;
+		z-index: 888;
+		border-radius: 10px;
+		box-shadow: 0px 20px 25px rgba(0, 0, 0, 0.153);
+	}
 }
