--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -76,110 +76,6 @@ ul li:hover #navbar__divv {
 	transform: translateY(2px);
 }
 
-.app__cta-cart {
-	padding-right: 2rem;
-	position: relative;
-}
-.app__cta-cart button {
-	outline-offset: 2px !important;
-	padding: 0.375rem;
-	position: relative;
-	cursor: pointer;
-}
-.cart-item-qty {
-	position: absolute;
-	top: -3px;
-	left: 15px;
-	font-size: 12px;
-	color: #eee;
-	background-color: var(--color-orange);
-	width: 22px;
-	height: 16px;
-	border-radius: 40%;
-	text-align: center;
-	font-weight: 700;
-}
-/*  */
-
-.app__cart-title {
-	padding: 20px;
-	border-bottom: 1px solid var(--grayish-blue);
-}
-.app__cart-heading {
-	font-family: var(--font-base);
-	font-weight: var(--font-bold);
-}
-/* cart items */
-.app__cart-items {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: calc(100% - 60px);
-	padding: 20px 20px 30px 20px;
-}
-.app__cart-items-cont {
-	position: relative;
-	height: 100%;
-	width: 100%;
-}
-/* empty-cart */
-.empty-cart {
-	font-weight: var(--font-bold);
-	color: var(--dark-grayish-blue);
-	position: absolute;
-	top: 45%;
-	left: 25%;
-	/* transform: translate(-50%); */
-}
-/* filled cart */
-.item-in-cart {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.item-img-cont {
-	width: 50px;
-	height: 50px;
-}
-.item-img {
-	width: 100%;
-	height: 100%;
-	border-radius: 5px;
-}
-.item-desc {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: flex-start;
-	padding: 5px 15px;
-}
-.item-title {
-	padding-bottom: 5px;
-}
-
-.item-title,
-.total-qty,
-.total-price {
-	font-size: 14px;
-	color: var(--dark-grayish-blue);
-	font-weight: var(--font-normal);
-}
-.total-price {
-	color: var(--very-dark-blue);
-	font-weight: var(--font-bold);
-}
-
-.in-cart-btn {
-	width: 100%;
-	height: 55px;
-	margin-top: 1.5rem;
-	padding: 0 !important;
-	background-color: var(--color-orange) !important;
-	color: var(--color-white);
-	border-radius: 10px;
-	font-weight: var(--font-bold);
-}
-
 .app__cta-avatar img {
 	border: 2px solid transparent;
 	border-radius: 100%;
@@ -268,7 +164,7 @@ ul li:hover #navbar__divv {
 	.app__logo-menu-cont {
 		display: none;
 	}
-
+/* 
 	.app__cta-cart {
 		padding-right: 1.5rem;
 	}
@@ -287,36 +183,15 @@ ul li:hover #navbar__divv {
 	.total-qty,
 	.total-price {
 		font-size: 14px;
-	}
+	} */
 
 	.app__cta-avatar img {
 		width: 100%;
 		height: 30px;
 	}
 }
-/* for 320px devices */
-@media screen and (max-width: 21.875rem) {
-	.item-title,
-	.total-qty,
-	.total-price {
-		font-size: 13px;
-	}
-}
-/* from 350px to 450px  */
-@media screen and (max-width: 28.125rem) {
-	.app__cart-info {
-		position: absolute;
-		top: 60px;
-		right: -53px;
-		background-color: white;
-		width: 96vw;
-		height: 250px;
-		z-index: 888;
-		border-radius: 10px;
-		box-shadow: 0px 20px 25px rgba(0, 0, 0, 0.153);
-		opacity: 0;
-	}
-}
+
+
 @media screen and (max-width: 62.5rem) {
 	.app__navbar-links li {
 		margin: 0 0.5rem;
@@ -332,17 +207,7 @@ ul li:hover #navbar__divv {
 	.app__navbar {
 		width: 100%;
 	}
-	.app__cart-info {
-		position: absolute;
-		top: 60px;
-		left: -230px;
-		background-color: white;
-		width: 330px;
-		height: 250px;
-		z-index: 888;
-		border-radius: 10px;
-		box-shadow: 0px 20px 25px rgba(0, 0, 0, 0.153);
-	}
+	
 }
 /* from 1300px */
 @media screen and (min-width: 81.25rem) {
