--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -15,6 +15,9 @@
 	cursor: pointer;
 }
 .cart-item-qty {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	position: absolute;
 	top: -3px;
 	left: 15px;
