cart item position change

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -65,7 +65,7 @@
 /* filled cart */
 .item-in-cart {
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
 }
 .item-img-cont {
