--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -104,7 +104,7 @@
 	width: 100%;
 	height: 55px;
 	margin-top: 1.5rem;
-	padding: 0 1rem !important;
+	padding: 0 !important;
 	background-color: var(--color-orange) !important;
 	color: var(--color-white);
 	border-radius: 10px;
@@ -159,17 +159,24 @@
 	}
 }
 
-/* burger menu dissapear from 900px */
+/* cart menu changes on 900px */
 @media screen and (min-width: 56.25rem) {
 	.app__cart-info {
 		position: absolute;
 		top: 60px;
-		left: -175px;
+		left: -240px;
 		background-color: white;
 		width: 330px;
 		height: 250px;
 		z-index: 888;
 		border-radius: 10px;
 		box-shadow: 0px 20px 25px rgba(0, 0, 0, 0.153);
+	}
+}
+
+/* cart menu position change on 1300px */
+@media screen and (min-width: 81.25rem) {
+	.app__cart-info {
+		left: -175px;
 	}
 }
